# Industrial_DigitalTwin_Simulation

./: .gitignore  README.md  opcua_log_polling.ndjson  opcua_log_subscription.ndjson  pyproject.toml
docs/: opcuaServer.md  overview.md
src/: opcuaServer.py
src/controller/: DataChangeHandler.py  DataCollector.py  EmitterController.py  OPCUAVariableLogger.py
src/plc_code/: PLC_PRG.st
tools/: describle_opcua_server.py  verify_attributes_of_variable.py
