[project]
name = "industrial-digitaltwin-simulation"
version = "0.1.0"
description = ""
authors = [
    {name = "sandrorsjunior",email = "sandrorsjunior@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opcua (>=0.98.13,<0.99.0)"
]

[tool.poetry]
packages = [{include = "industrial_digitaltwin_simulation", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
